[tool.poetry]
name = "pyHIDS"
version = "0.7.0"
description = "A host-based intrusion detection system."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"

homepage = "https://github.com/cedricbonhomme/pyHIDS"
repository = "https://github.com/cedricbonhomme/pyHIDS"

keywords = ["hids", "security", "hashlookup", "integrity"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

include = [
    "README.md",
    "COPYING",
    "conf.py",
    "bin/*",
]

[tool.poetry.scripts]
pyhids = "bin.main:main"

[tool.poetry.dependencies]
python = "^3.11"
rsa = "^4.9"
pyhashlookup = "^1.2.1"
pypandora = "^1.5.0"
pymisp = "^2.4.176"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
