[tool.poetry]
name = "pyHIDS"
version = "0.9.5"
description = "A host-based intrusion detection system."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"

homepage = "https://github.com/cedricbonhomme/pyHIDS"
repository = "https://github.com/cedricbonhomme/pyHIDS"

keywords = ["hids", "security", "hashlookup", "integrity"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]

include = [
    "README.md",
    "NEWS.md",
    "COPYING",
    "conf.py",
    "bin/*",
]

[tool.poetry.urls]
"Changes" = "https://github.com/cedricbonhomme/pyHIDS/blob/master/NEWS.md"

[tool.poetry.scripts]
pyhids = "bin.main:main"

[tool.poetry.dependencies]
python = "^3.11"
rsa = "^4.9"
pyhashlookup = "^1.2.1"
pypandora = "^1.5.0"
pymisp = "^2.4.176"
yara-python = "^4.3.1"
flor = "^1.1.3"
scalable-cuckoo-filter = "^1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
pip-audit = "^2.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs|"
