[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "pyHIDS"
version = "0.9.5"
description = "A host-based intrusion detection system."
authors = [
    {name = "Cédric Bonhomme", email = "cedric@cedricbonhomme.org"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["hids", "security", "hashlookup", "integrity"]
# classifieres is dynamic because we want to create Python classifiers automatically
dynamic = ["classifiers"]

requires-python = "^3.11"
dependencies = [
    "rsa (>=4.9)",
    "pyhashlookup (>=1.2.1)",
    "pypandora (>=1.5.0)",
    "pymisp (>=2.4.176)",
    "yara-python (>=4.3.1)",
    "flor (>=1.1.3)",
    "scalable-cuckoo-filter (>=1.1)",
]


[project.urls]
Homepage = "https://github.com/cedricbonhomme/pyHIDS"
Repository = "https://github.com/cedricbonhomme/pyHIDS"
Changelog = "https://github.com/cedricbonhomme/pyHIDS/blob/master/NEWS.md"


[project.scripts]
pyhids = "bin.main:main"


[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
include = [
    "README.md",
    "NEWS.md",
    "COPYING",
    "conf.py",
    "bin/*",
]


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
pip-audit = "^2.7.3"


[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs"
